# DC31IPR_Digital_Transformation_Tool

./: README.md  __init__.py  app.py  db_connection.py  db_connector.py  local_run.ipynb  main.py  pyproject.toml  responseAPI.py  route_utils.py  test_db_connection.py  testedapp.py
controllers/: __init__.py  algorithm_controller.py  app.py  login.py  login_controller.py  page_five_controller.py  page_four_controller.py  page_one_controller.py  page_three_controller.py  page_two_controller.py  python_connect_to_mysql.py  register.py  registration_controller.py  test.py  user_answer_controller.py
daos/: authenticate_user.py  check_existing_user.py  find_user_by_username.py  get_db_data.py  get_user_answer_weights.py  insert_new_user.py  mysql_queries.py  upsert_data.py  upsert_data_multiple.py  upsert_data_single.py
models/: login_model.py  users.py
sql/: answers_table.sql  database.sql  questionnaire_table.sql  questions_table.sql  sections_table.sql  userAnswers_table.sql  users_table.sql
static/: CheckboxLimits.js  FetchAssessmentFooter.js  FetchAssessmentHeader.js  PageFunctionality.js  PageOne.js  SaveFunctionality.js
templates/: AssessmentFooterTemplate.html  AssessmentHeaderTemplate.html  HomePage.html  LoginPage.html  PageFiveDigitalMarketing.html  PageFourMarketTrends.html  PageOneDigitalStrategy.html  PageThreeTechnologyAdoption.html  PageTwoDigitalSkills.html  RegistrationPage.html  ReportPage.html  SubmitAssessmentPage.html  test.html
views/: HomePage.html  LoginPage.html  PageEightCustomerExperience.html  PageElevenCyberSecurity.html  PageOne.html  (+17 more)
(+77 files in other folders)
