[tool.poetry]
name = "dc31ipr-digital-transformation-tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-mysqldb = "^2.0.0"
pymysql = "^1.1.0"
flash = "^1.0.3"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
mysql-connector-python = "^9.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
